[package]
name = "freya-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
freya-core = { path = "../freya-core" }
freya-tools = { path = "../freya-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
