[package]
name = "freya-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
freya-core = { path = "../freya-core" }
freya-engine = { path = "../freya-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
tempfile = "3"
